------------------------------
       Version 5.3.4
------------------------------

  . Check Syntax no longer calls the syncheck:add-id-set method (and
    thus neither the syncheck:add-rename-menu method).

  . Added a column width guide that defaults to 102 columns, but
    is also disabled by default

------------------------------
       Version 5.3.3
------------------------------

  . added the ability to dynamically add new mixins to the DrRacket
    classes and to start up a REPL to evaluate expressions to change
    DrRacket's behavior.

  . added a simple "install package" tool via a menu

  . more improvements to DrRacket's responsiveness

------------------------------
       Version 5.3.3
------------------------------

  . added esc;h key binding (to the interactions window) that shows
    the history of expressions evaluated

------------------------------
       Version 5.3.2
------------------------------

  . fixed a flaw in interactions between
    the contour window and highlighting

------------------------------
       Version 5.3.2
------------------------------

  . Removed 'Create Executable...' functionality from DrRacket,
    except in the "The Racket Language" (#lang-based) language
    and the teaching languages (HtDP and DMdA).

  . DrRacket is more responsive when editing

  . The language dialog has been revamped to encourage people even
    more to use the #lang language (unless they are using the teaching
    languages)

  . Automatic-parenthesis mode improvements 
    (thanks to Nadeem Abdul Hamid)

      - Added some "smart-skip" behavior to insert-close-paren,
        described in the documentation.
        - When auto-parens mode is enabled,
          the existing "balance-parens" keybinding invokes
          insert-close-paren with a smart-skip argument of
          'adjacent
        - A new "balance-parens-forward" keybinding invokes
          insert-close-paren with a smart-skip argument of